fix white space after footer

--- a/wp-content/themes/FoundationPress/src/assets/scss/modules/_content.scss
+++ b/wp-content/themes/FoundationPress/src/assets/scss/modules/_content.scss
@@ -13,7 +13,7 @@
   @include xy-grid-container;
   @include xy-grid();
   margin-top: 1rem;
-  min-height: 100%;
+  min-height: 100vh;
 
   @include breakpoint(medium) {
     margin-top: 0rem;
@@ -38,7 +38,7 @@
   &.full-width {
     .main-content {
       @include xy-cell(12);
-        min-height: 100%;
+        min-height: 100vh;
     }
   }
 
